--- a/desafio-docker-suporte/docker-compose.yaml
+++ b/desafio-docker-suporte/docker-compose.yaml
@@ -6,11 +6,14 @@ services:
     build:
       context: app
     container_name: app
+    entrypoint: sh -c "npm install && npm run dev"
     tty: true
     volumes:
       - ./app:/usr/src/app
     depends_on:
-      - database
+      database:
+        condition: "service_healthy"
+    
 
   nginx:
     image: nginx:latest
@@ -28,11 +31,23 @@ services:
     container_name: database
     restart: always
     tty: true
-    volumes:
-      - mysql:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=nodedb
       - MYSQL_ROOT_PASSWORD=root
+    # mapeia porta do banco de dados MySQL para a porta default 3306
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql:/var/lib/mysql
+      # executa o script SQL que está dentro do diretório database (cria a tabela characterSW)
+      - ./database:/docker-entrypoint-initdb.d/
+    #verifica a conexão com o banco de dados
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-u", "root", "-p$$MYSQL_ROOT_PASSWORD"]
+      interval: 5s
+      timeout: 10s
+      retries: 3
+    
 
 volumes:
   mysql:
