--- a/desafioNodeMysql/docker-compose.yaml
+++ b/desafioNodeMysql/docker-compose.yaml
@@ -25,13 +25,14 @@ services:
       - app
 
   database:
-    image: mysql:8.0
+    image: mysql:5.7
     command: --innodb-use-native-aio=0
     container_name: database
     restart: always
     tty: true
     volumes:
       - mysql:/var/lib/mysql
+      - ./database:/docker-entrypoint-initdb.d/
     environment:
       - MYSQL_DATABASE=database
       - MYSQL_ROOT_PASSWORD=root
